--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
         android:label="google_map_project"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyC-uKXn8BuwyK_KgZV3Aje7pSxeMiqgz5k"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
